# agrimate_reachability

./: Notes.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
Universal_Robots_ROS2_Description/config/: initial_positions.yaml
Universal_Robots_ROS2_Description/launch/: view_ur.launch.xml
Universal_Robots_ROS2_Description/meshes/platform/: left_lateral.STL
Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro  ur_platform.urdf.xacro
Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_platform_moveit.launch.py
Universal_Robots_ROS2_Driver/ur_moveit_config/rviz/: view_robot.rviz
Universal_Robots_ROS2_Driver/ur_moveit_config/srdf/: ur.srdf.xacro  ur_platform_macro.srdf.xacro
Universal_Robots_ROS2_Driver/ur_robot_driver/launch/: ur_platform_control.launch.py
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: AddBox.srv  CollisionCost.srv  SampleOrientations.srv  SamplePoints.srv
moveit_cpp_demo/: CMakeLists.txt  package.xml
moveit_cpp_demo/config/: manipulability.yaml
moveit_cpp_demo/src/: collisions_server.cpp  ik_collisions.cpp  ik_collisions_v2.cpp  ik_test.cpp  move_robot.cpp  reachability_ik_checker.cpp  reachability_ik_checker_v2.cpp  reachability_ik_checker_v3.cpp  reachability_ik_checker_v4.cpp
reach_pkg/: package.xml  setup.cfg  setup.py
reach_pkg/reach_pkg/: collisions_cost_server.py  node_angles_cone.py  node_broadcast_orientations.py  node_broadcast_poses.py  node_broadcast_positions.py  node_pruning_positions.py  passive_joints_platform.py  prob_angles_v3.py  prob_task_v1.py  probability_collisions.py
